--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/175/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/175/index.mdx
@@ -1,16 +1,15 @@
 ---
 slug: /175
-title: "React Hebdo #175: ..."
+title: "React Hebdo #175: RSC, useSyncExternalStore, Vinxi, Server Actions, Next.js, Remix, margins, WakuLand, R3F-uikit, React-Forget, RN releases, Bridgeless, Expo Fingerprint, Flash Calendar, Zeego, RN Reusables..."
 authors: [slorber]
 date: 02-28-2024
-unlisted: true
 ---
 
-Salut à tous !
+Hi everyone!
 
-<Todo />
+This week has been rather quiet in terms of releases, but we have many great articles to read!
 
-Promo [react.paris](http://react.paris) + [reactconnection.io](http://reactconnection.io)
+Sorry for last week, the email was so long that despite removing links, it got truncated by Gmail 😅.
 
 <!-- truncate -->
 
@@ -43,9 +42,42 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![Instant Search Params with React Server Components](/emails/issues/175/next-search.jpg)](https://buildui.com/posts/instant-search-params-with-react-server-components)
+
+**[Instant Search Params with React Server Components](https://buildui.com/posts/instant-search-params-with-react-server-components)**
+
+An awesome interactive article showing that it’s surprisingly hard to persist UI state to the query string in a React Server Component world and yet give immediate user feedback. Updating the URL triggers a server round-trip. The new `useOptimistic` hook solves this problem nicely. This also shows a nice use-case for CSS `:has()`, to avoid hoisting the `startTransition` pending state.
+
+---
+
+[![Building a React Metaframework with Vinxi](/emails/issues/175/vinxi.jpg)](https://www.brenelz.com/posts/building-a-react-metaframework-with-vinxi/)
+
+**[Building a React Metaframework with Vinxi](https://www.brenelz.com/posts/building-a-react-metaframework-with-vinxi/)**
+
+TIL about [Vinxi](https://vinxi.vercel.app/), a toolbox built on top of Vite and Nitro enabling you to easily create your own meta-framework, with support, SSR, routing conventions, server functions and everything. Solid Start uses it behind the hood, but it’s a framework-agnostic SDK. Apparently, [TanStack Start will use it too](https://twitter.com/sebastienlorber/status/1762809340719780080)! This article explains how to use it with React.
+
+---
 
 - 💸 [Explore how to build a feature-rich PDF Viewer in React with Apryse's rendering engine. Customize UI, scroll, zoom, and search with annotations.](https://apryse.com/blog/build-custom-react-pdf-viewer?utm_source=thisweekinreact2&utm_medium=email&utm_campaign=newsletter2)
+- 📜 [Avoiding Hydration Mismatches with useSyncExternalStore](https://tkdodo.eu/blog/avoiding-hydration-mismatches-with-use-sync-external-store): Another great article from Dominik explaining how `useSyncExternalStore` and its 2 client/server snapshot callbacks can help prevent hydration mismatches. It can be a better alternative to useEffect for many use-cases, including rendering localized dates, or creating a client-only wrapper component.
+- 📜 [Exploring Next.js Forms with Server Actions](https://www.robinwieruch.de/next-forms/): A very comprehensive step-by-step tutorial on using the new React/Next.js form primitives without any abstractions, and all the little mistakes you might make along the way.
+- 📜 [No Outer margin](https://kyleshevlin.com/no-outer-margin/): Gives good reasons to not apply margins inside your component root, but instead let the parent component handle the layout. Margins are the first thing that come to mind, but there are also other CSS rules that break component encapsulation. I recovered a great deleted article for you on that matter: [Layout-isolated components](https://web.archive.org/web/20201024040746/https://visly.app/blog/layout-isolated-components).
+- 📜 [Vjeux - 12 Years at Meta](https://blog.vjeux.com/2024/project/12-years-at-meta.html): If you are a new React developer, you may not have heard of Christopher Chedeau, but he’s one of the most impactful member of our community. A few things he created or significantly contributed to: React, React Native, Yoga, CSS-in-JS, Prettier, Excalidraw, Docusaurus, GraphQL…
+- 📜 [Learning Four Key Primitives In Solid](https://www.brenelz.com/posts/learning-four-key-primitives-in-solid/): Don’t be mislead by the title, it’s a great article for React devs, comparing Solid vs React, Next.js and Remix on 4 interesting topics. TIL that Next.js RSC components would waterfall by default unless you use a preloading function.
+- 📜 [Handle both JSON and FormData in Remix](https://www.jacobparis.com/content/conform-json-formdata): Jacob explains the tradeoffs of using form inputs vs creating a FormData or JSON payload manually on an event handler. Shows how to create an Remix abstraction using Zod and Conform that can conveniently accept both JSON and FormData paylods.
+- 📜 [Introducing Waku Land](https://interbolt.org/blog/waku-land/): A live deployment of every Waku examples.
+- 📜 [Where to host your Remix app in 2024](https://www.jacobparis.com/content/where-to-host-remix?ref=twitter): Updated on 25 Feb.
+- 📜 [HTMX vs React - A Complete Comparison](https://semaphoreci.com/blog/htmx-react): The article suggests to use React for rich web experiences, and use HTMX for pages with simpler interactivity.
+- 📜 [Next.js vs. Remix - A Developer's Dilemma](https://blog.saeloun.com/2024/02/21/next.js-vs-remix/)
+- 📜 [Compiler Theory and Reactivity](https://www.recompiled.dev/blog/ssa/): Sathya works on React Forget and explains a compiler theory pass they use called Static Single Assignment form. I have to admit I’m a bit lost here 😅. His previous post on [Alias analysis](https://www.recompiled.dev/blog/alias-analysis/) is easier to understand.
+- 📜 [How to Style Active Links in Next.js App Router](https://spacejelly.dev/posts/how-to-style-active-links-in-next-js-app-router)
+- 📜 [Add Dynamic Sitemap to Next.js Website Using Pages or App Directory](https://claritydev.net/blog/nextjs-dynamic-sitemap-pages-app-directory)
+- 📦 [@react-three/uikit - Build performant 3D user interfaces using react-three/fiber and yoga](https://github.com/pmndrs/uikit): New Poimandres collective package preview with an impressive 🐦 [demo](https://twitter.com/0xca0a/status/1762069894932160943)
+- 🎥 [Ryan Toronto - Asset loading in React 19](https://www.youtube.com/watch?v=dxWLp-8mXes): Explains a quite unknown but exciting upcoming React feature that lets you load assets (here CSS) of the next page before completing the navigation transition.
+- 🎥 [Jack Herrington - React Hook Form & React 19 Form Actions, The Right Way](https://www.youtube.com/watch?v=VLk45JBe8L8)
+- 🎥 [Fireship - They made React great again? (React Labs)](https://www.youtube.com/watch?v=4k6Xgjqkad4)
+- 🎥 [Fireship - This UI component library is mind-blowing (Aceternity Components)](https://www.youtube.com/watch?v=RPa3_AD1_Vs)
+- 🎙️ [PodRocket -StyleX with Naman Goel](https://podrocket.logrocket.com/stylex-naman-goel)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -72,32 +104,64 @@ Dive into Clerk's [quickstarts and tutorials](https://clerk.com/docs/quickstarts
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+This section is now co-authored with [Benedikt](https://twitter.com/bndkt). Feel free to send us your comments by email or on [Twitter](https://twitter.com/bndkt)!
+
+This past week, we all enjoyed a brief respite from major headline React Native news (or did I miss something, in this case [@me](https://twitter.com/bndkt)). Perhaps that's a welcome change, especially after the whirlwind of events like Expo 50, visionOS, the State of React Native, react-strict-dom, and more. However, this doesn't mean the React Native world has come to a halt. There’s been a lot of little announcements that give us a glimpse in the near future of React Native. The first release candidates for [RN 0.74](https://github.com/facebook/react-native/blob/ee2bc59dfe4579cad3b7f0b5de667a89fcac8710/CHANGELOG.md#0740-rc0) were released. They contain a lot of improvements as well as some deprecations and breaking changes, but from the first glance nothing major that makes me worried about upgrading effort. Most notably, bridgeless mode becomes the new default with 0.74 (but only when New Arch is enabled). Bridgeless mode is the third pillar of the New Arch, after the already introduced TurboModules and new renderer (Fabric). Speaking of New Arch and defaults, a [PR](https://github.com/facebook/react-native/pull/43135) was merged that’ll make the New Arch the default beginning with RN 0.75 (it will still be possible to opt out though). Also, the RFC with the [React Native Frameworks](https://github.com/react-native-community/discussions-and-proposals/blob/main/proposals/0759-react-native-frameworks.md) definition has been merged, laying out the responsibilities of RN vs frameworks on top of RN.
+
+---
 
 - 💸 [React Universe Conf - join the conference at the lowest price now. There’s a limited batch of blind bird tickets available.](https://www.reactuniverseconf.com/)
+- 📜 [How to integrate Native iOS code into a React Native project for iOS](https://www.themorrow.digital/blog/how-to-integrate-native-modules-in-react-native-ios-apps): Good introduction to bridging headers, @objc, and other fun stuff you need to know before diving into native code for iOS.
+- 📜 [react-strict-dom, why it's so great?](https://szymonrybczak.dev/blog/react-strict-dom) If you want to know how `<html.div>` ends up as a native component in iOS, read this short summary of react-strict-dom.
+- 📜 [Expo Push Notifications Migrating to FCM V1](https://expo.dev/blog/expo-push-notifications-migrating-to-fcm-v1): In June, FCM Legacy will join the long list of discontinued Google services, so it’s really time to migrate!
+- 📜 [@expo/fingerprint 🤝 GitHub Actions](https://expo.dev/blog/expo-fingerprint-github-actions): In my opinion, Fingerprint is the most underhyped feature of Expo SDK 50. This post shows the killer use case: Kicking off a new native build as soon as Fingerprint determines it is required.
+- 📜 [Universal Apps: A Single, Unified Codebase Powering Mobile, Desktop, Web, and TV?](https://www.reactnativetv.com/blog/universal-apps-powering-seven-platforms) Kind of the holy grail, and a topic I’m really excited about in 2024: One app, all the platforms. This article has some interesting thoughts about it.
+- 📜 [How to build an offline-first app using Expo & Legend State](https://expo.dev/blog/offline-first-apps-with-expo-and-legend-state)
+- 📦 [React Native 0.74-rc.1](https://github.com/facebook/react-native/releases/tag/v0.74.0-rc.1)
+- 📦 [React Native v0.73.5](https://github.com/facebook/react-native/releases/tag/v0.73.5)
+- 📦 [react-native-visionos 0.73.6](https://github.com/callstack/react-native-visionos/releases/tag/v0.73.6-visionos): Multi window support and [new docs](https://callstack.github.io/react-native-visionos-docs/)!
+- 📦 [Zeego 1.8 + 1.9 - Universal cross-platform menus - Horizontal groups and group labels](https://github.com/nandorojo/zeego/releases)
+- 📦 [react-native-image-editor 4.0 - base64 output, format prop, returns metadata](https://github.com/callstack/react-native-image-editor/releases/tag/4.0.0)
+- 📦 [React Native Flash Calendar - Fast and flexible calendar using Shopify FlashList](https://github.com/MarceloPrado/flash-calendar)
+- 📦 [react-native-reusables](https://github.com/mrzachnugent/react-native-reusables): I love shadcn/ui (UI library) for web, this brings it to RN!
+- 🎥 [Fireship - Expo in 100 Seconds](https://www.youtube.com/watch?v=vFW_TxKLyrE)
+- 🎥 [Theo Brown - React's Next Big Change? (react strict dom)](https://www.youtube.com/watch?v=hz5gbCXJ-vA)
+- 🎥 [Expo - How to build TV apps with Expo SDK 50](https://www.youtube.com/watch?v=PUMBWeLVuiw)
+- 🎙️ [Rocket Ship 031 - React Native Gestures & Microinteractions with Kacper Kapuściak](https://share.transistor.fm/s/64cd1071)
+- 🎙️ [RNR 289 - Real Life React Native: David Leuliette Talks Retail Shake Scanner](https://www.reactnativeradio.com/episodes/rnr-289-real-life-react-native-david-leuliette-talks-retail-shake-scanner)
 
 ---
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
-
-💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+- 📜 [Héberge des fichiers avec Remix](https://algomax.fr/blog/heberge-des-fichiers-avec-remix)
+- 🎥 [React Native / Expo et supabase](https://www.youtube.com/watch?v=TDBZ2qM_8S0&list=PLVq2Nd186wZGUFifnViYVVE9xYygILip-)
+- 🎥 [Comment résoudre les Erreurs d'hydratation en Next.js ?](https://www.youtube.com/watch?v=FrLPbHCYMS8)
+- 🎥 [Ces Composants React sont un Game Changer](https://www.youtube.com/watch?v=HmMs19aAK6g)
+- 📅 [Conférence React Paris - 22 Mars](https://react.paris/): nouvelle conférence, les speakers ont déjà été annoncés.
+- 📅 [React Connection - 22 Avril](https://reactconnection.io/) + [React-Native Connection - 23 Avril](https://reactnativeconnection.io/): 2 jours de conférence web et mobile. CFP est ouvert jusqu'au 3 février.
 
 ---
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- 📣 [Apple killing PWAs in EU - Immediate Action Needed](https://open-web-advocacy.org/apple-attempts-killing-webapps/)
+- 👀 [TypeScript PR - Infer type predicates from function bodies using control flow analysis](https://github.com/microsoft/TypeScript/pull/57465)
+- 👀 [Rsbuild v1.0 Release Plan - Rspack v1 and Rsbuild v1 before July 2024](https://github.com/web-infra-dev/rsbuild/discussions/1678)
+- 📜 [CSS :has() Interactive Guide](https://ishadeed.com/article/css-has-guide/)
+- 📜 [JSDoc as an alternative TypeScript syntax](https://alexharri.com/blog/jsdoc-as-an-alternative-typescript-syntax)
+- 📜 [Node.js 2023 Year in An Article](https://blog.rafaelgss.dev/nodejs-2023-year-in-review)
+- 📦 [Babel 7.24 - Decorator updates and JSON modules imports](https://babeljs.io/blog/2024/02/28/7.24.0)
+- 📦 [TypeScript 5.4 RC - NoInfet utility type, type narrowing improvements in closureq](https://devblogs.microsoft.com/typescript/announcing-typescript-5-4-rc/)
+- 📦 [LightningCSS 1.42 - light-dark(), system colors, custom property deduplication](https://github.com/parcel-bundler/lightningcss/releases/tag/v1.24.0)
+- 📦 [Chrome 122 - Perf DevTools, Storage Buckets, Async Clipboard](https://developer.chrome.com/blog/new-in-chrome-122/)
+- 📦 [PGlite - Postgres in WASM](https://github.com/electric-sql/pglite)
+- 📦 [snap - snapshot testing companion for node:test](https://github.com/mcollina/snap)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/175/meme.jpg)](https://twitter.com/sebastienlorber/status/1760963583603581163)
 
 A plus 👋
