--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/174/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/174/index.mdx
@@ -53,18 +53,18 @@ Axiom efficiently captures 100% of your event data so you’ll never have to wor
 
 Cette semaine a été marquée par la première mise à jour officielle de React Labs depuis un an presque jour pour jour, et des annonces très intéressantes ont été faites. Nous avons déjà couvert plusieurs d'entre elles ici, mais il est bon d'avoir un résumé officiel !
 
-React Forget is 🐦 [now just called React Compiler](https://twitter.com/en_JS/status/1758224340880158955) and it seems that the production 🐦 [Instagram rollout](https://twitter.com/sebastienlorber/status/1734607171030303186) has been successful.
+React Forget s'appelle 🐦 [désormais simplement React Compiler](https://twitter.com/en_JS/status/1758224340880158955) et il semble que le passage 🐦 [en production sur Instagram](https://twitter.com/sebastienlorber/status/1734607171030303186) se soit déroulé sans problème.
 
-The next React release will be a major version. React 19 is around the corner, and there’s a certain [conference](https://conf.react.dev/) that would lend itself to such an announcement 😏. The release will also include built-in support for managing page metadata (built-in support for what React-Helmet did for us, with proper streaming support), Asset Loading (including Suspense integration) and Actions for sending data from client to server. The surface area that meta-frameworks like Next.js and Remix need to cover with proprietary implementations is shrinking.
+La prochaine version de React sera une version majeure. React 19 arrive à grands pas, et une certaine [conférence](https://conf.react.dev/) se prêterait bien à une telle annonce 😏. La version comprendra également un support intégré pour la gestion des métadonnées des pages (support intégré correspondant à ce que React-Helmet réalisait pour nous, avec un support de streaming approprié), le chargement des ressources (y compris l'intégration de Suspense) et les Actions pour l'envoi de données du client au serveur. La partie que les méta-frameworks comme Next.js et Remix doivent couvrir avec des implémentations propriétaires est en train de se réduire.
 
-One of the most underrated upcoming React features, the Offscreen API (named as Activity), is temporarily deprioritized to focus on React 19. We’ll have to wait a bit more to fully leverage the concurrent model introduced by React 18.
+L'une des fonctionnalités les plus sous-estimées de React, l'API Offscreen (nommée Activity), est temporairement dépriorisée pour se concentrer sur React 19. Nous devrons attendre encore un peu pour tirer pleinement parti du modèle concurrent introduit par React 18.
 
-Overall, it’s an exciting time to be a React developer, and we look forward to the next major version!
+Dans l'ensemble, c'est une étape très intéressante pour les développeurs React, et nous attendons avec impatience la prochaine version majeure !
 
-See also:
+A voir également :
 
-- 🐦 [Andrew Clark’s tweet](https://twitter.com/acdlite/status/1758229889595977824) containing interesting extras I first hear about, such as React refs becoming normal props, or the ability to use `<Context>` instead of `<Context.Provider>`.
-- 🎥 [Theo Browne’s summary video - React 19 Is Here - Are You Ready?](https://www.youtube.com/watch?v=B-tjhF7ojeA)
+- 🐦 [Le tweet de Andrew Clark](https://twitter.com/acdlite/status/1758229889595977824) contenant des éléments supplémentaires intéressants dont j'entends parler pour la première fois, comme les refs React qui deviennent des props ordinaires, ou la possibilité d'utiliser `<Context>` au lieu de `<Context.Provider>`.
+- 🎥 [Vidéo synthétique de Theo Browne - React 19 Is Here - Are You Ready?](https://www.youtube.com/watch?v=B-tjhF7ojeA)
 
 ---
 
@@ -72,7 +72,7 @@ See also:
 
 **[Remix 2.7 - Remix Vite is Now Stable](https://remix.run/blog/remix-vite-stable)**
 
-An important release for Remix, stabilizing the Vite plugin and the SPA mode, proper support for Cloudflare Pages, introducing a preset system, and shipping many other useful improvements. An upcoming dedicated post will likely detail how the new SPA mode will help Vite + React Router apps transition to Remix without having to introduce a server runtime. If you are still using Create-React-App, it might be a good time to consider migrating to Vite!
+Une version importante pour Remix, qui stabilise le plugin Vite et le mode SPA, prend correctement en charge Cloudflare Pages, introduit un système de presets, et apporte de nombreuses autres améliorations utiles. Un prochain article dédié détaillera probablement comment le nouveau mode SPA aidera les applications Vite + React Router à passer à Remix sans avoir à introduire un serveur d'exécution. Si vous utilisez encore Create-React-App, c'est peut-être le bon moment pour envisager de migrer vers Vite !
 
 ---
 
